Align Spec with implementation (v1)
